--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #CD5C5C;
-    color: #333;
+    color: #90EE90;
     line-height: 1.6;
 }
 
